--- a/DeviceSettings/AndroidManifest.xml
+++ b/DeviceSettings/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cyanogenmod.settings.device"
+    package="org.omnirom.omnigears.device"
     android:sharedUserId="android.uid.system" >
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -8,11 +8,11 @@
 
     <application android:label="@string/app_name">
         <activity
-            android:name="com.cyanogenmod.settings.device.DeviceSettings"
-            android:icon="@drawable/ic_launcher_cmdevicesettings"
+            android:name="org.omnirom.omnigears.device.DeviceSettings"
+            android:icon="@drawable/ic_launcher_omnidevicesettings"
             android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="com.cyanogenmod.action.LAUNCH_DEVICE_SETTINGS" />
+                <action android:name="org.omnirom.action.LAUNCH_DEVICE_SETTINGS" />
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
