--- a/project.config
+++ b/project.config
@@ -1,2 +1,6 @@
 [project]
 	state = active
+[access "refs/heads/*"]
+	label-Code-Review = -2..+2 group Samsung Galaxy S IV Maintainers
+	label-Verified = -1..+1 group Samsung Galaxy S IV Maintainers
+	submit = group Samsung Galaxy S IV Maintainers
