--- a/project.config
+++ b/project.config
@@ -4,3 +4,4 @@
 	label-Code-Review = -2..+2 group Samsung Galaxy S IV Maintainers
 	label-Verified = -1..+1 group Samsung Galaxy S IV Maintainers
 	submit = group Samsung Galaxy S IV Maintainers
+	push = +force group Samsung Galaxy S IV Maintainers
